# FrustraEvo

./: pyproject.toml
src/frustraevo/: Functions.py  run_logo.py
